First ethic change batch

--- a/localisation/english/replace/zz_evolved_ethics_authorities_l_english.yml
+++ b/localisation/english/replace/zz_evolved_ethics_authorities_l_english.yml
@@ -99,11 +99,10 @@
 	civic_tooltip_egalitarian:0 "Is some degree of §Y$ethic_egalitarian$§!"
 	civic_tooltip_not_egalitarian:0 "Is not §Y$ethic_egalitarian$§!"
 
-
-	TEC_ETHIC_EGALITARIAN_UTOPIA:0 "§ELiving Standard:§! Allows §YUtopian§! Living Standards"
-	TEC_ETHIC_EGALITARIAN_EDICT:0 "§EEdict Bonus:§! Allows the use of the §YEncourage Thought§! edict"
-	TEC_ETHIC_EGALITARIAN_POLICY:0 "§EPolicy Bonus:§! Has access to the £political_power£ §Y['TO DO']§! Policy, allowing a more flexible modification of the democratic values of the ethic"
-	TEC_ETHIC_EGALITARIAN_MECHANIC:0 "§EMechanic Bonus:§! TO DO"
+	TEC_ETHIC_EGALITARIAN_LIVING_STANDARD:0 "§HLiving Standard:§! Allows §Y['concept_tec_living_standard_utopian']§! Living Standards"
+	TEC_ETHIC_EGALITARIAN_EDICT:0 "§HEdict Bonus:§! Allows the use of the £mod_country_edict_fund_add£ §Y['concept_tec_edict_encourage_thought']§! edict"
+	TEC_ETHIC_EGALITARIAN_POLICY:0 "§HPolicy Bonus:§! Has access to the £political_power£ §Y['concept_tec_ethic_policy_egalitarian']§!"
+	TEC_ETHIC_EGALITARIAN_MECHANIC:0 "§HMechanic Bonus:§! TO DO"
 
 	# Auth
 	ethic_authoritarian:1 "Authoritarian"
@@ -120,7 +119,10 @@
 	civic_tooltip_authoritarian:0 "Is some degree of §Y$ethic_authoritarian$§!"
 	civic_tooltip_not_authoritarian:0 "Is not §Y$ethic_authoritarian$§!"
 
-	TEC_ETHIC_ALLOWS_INFORMATION_QUARANTINE:0 "§EAllows §HInformation Quarantine§! edict§!"
+	TEC_ETHIC_AUTHORITARIAN_LIVING_STANDARD:0 "§HLiving Standard:§! Allows §Y['concept_tec_living_standard_stratified']§! Living Standards"
+	TEC_ETHIC_AUTHORITARIAN_EDICT:0 "§HEdict Bonus:§! Allows the use of the £mod_country_edict_fund_add£ §Y['concept_tec_edict_information_quarantine']§! edict"
+	TEC_ETHIC_AUTHORITARIAN_POLICY:0 "§HPolicy Bonus:§! Has access to the £political_power£ §Y['concept_tec_ethic_policy_authoritarian']§!"
+	TEC_ETHIC_AUTHORITARIAN_MECHANIC:0 "§HMechanic Bonus:§! TO DO"
 
 	# Phobe
 	ethic_xenophobe:0 "Xenophobe"
@@ -129,12 +131,17 @@
 	ethic_xenophobe_minor_plural:0 "xenophobes"
 	ethic_xenophobe_adj:0 "Xenophobia"
 	ethic_xenophobe_adj_minor:0 "xenophobia"
+	tec_xenophobic:0 "Xenophobic"
 	ethic_xenophobe_desc:1 "§LThe stakes could not be higher as we reach into the vast uncharted expanses of the galaxy, for we are gambling with the very survival of our species! We must be careful; the unknown hides infinite boons, but also infinite dangers...§!\n"
 
 	ethic_fanatic_xenophobe:0 "Fanatic Xenophobe"
 	ethic_fanatic_xenophobe_desc:1 "§LAny alien influence must be ruthlessly quashed. Only by staying pure, and true to ourselves and our very nature and value can we guard against insidious Xeno plots. Even mastery over the Alien might not be enough to guarantee our own safety...§!\n"
 
-	TEC_ETHIC_ALLOWS_FEAR_CAMPAIGN:0 "§EAllows §HFear Campaign§! edict§!"
+	TEC_ETHIC_NEVER_ALIEN_CITIZENSHIP_OR_SERVICE_OR_REFUGEES:0 "§EXeno species can't have §HFull Citizenship§!, access to §HMilitary Service§! or be accepted as §HRefugees§!§!"
+
+	TEC_ETHIC_XENOPHOBE_EDICT:0 "§HEdict Bonus:§! Allows the use of the £mod_country_edict_fund_add£ §Y['concept_tec_edict_fear_campaign']§! edict"
+	TEC_ETHIC_XENOPHOBE_POLICY:0 "§HPolicy Bonus:§! Has access to the £political_power£ §Y['concept_tec_ethic_policy_xenophobe']§!"
+	TEC_ETHIC_XENOPHOBE_MECHANIC:0 "§HMechanic Bonus:§! TO DO"
 
 	# Phile
 	ethic_xenophile:0 "Xenophile"
@@ -148,7 +155,12 @@
 	ethic_fanatic_xenophile:0 "Fanatic Xenophile"
 	ethic_fanatic_xenophile_desc:0 "§LIf there ever was such a thing as an absolute moral imperative, it would be to explore the cosmos and embrace all within it. We were never meant to journey alone.§!\n"
 
-	TEC_ETHIC_ALLOWS_LAND_OPPORTUNITY:0 "§EAllows §HLand of Opportunity§! edict§!"
+	TEC_ETHIC_NO_SLAVERY_OR_DISPLACE:0 "§EXeno species can't be §HEnslaved§! or §HPurged§!§!"
+
+	TEC_ETHIC_XENOPHILE_EDICT:0 "§HEdict Bonus:§! Allows the use of the £mod_country_edict_fund_add£ §Y['concept_tec_edict_land_of_opportunity']§! edict"
+	TEC_ETHIC_XENOPHILE_POLICY:0 "§HPolicy Bonus:§! Has access to the £political_power£ §Y['concept_tec_ethic_policy_xenophile']§!"
+	TEC_ETHIC_XENOPHILE_MECHANIC:0 "§HMechanic Bonus:§! TO DO"
+
 
 	# Mil
 	ethic_militarist:0 "Militarist"
@@ -162,7 +174,9 @@
 	ethic_fanatic_militarist:0 "Fanatic Militarist"
 	ethic_fanatic_militarist_desc:1 "§LThe ability to project force is of paramount importance. The only way to preserve our way of life is to make sure everyone shares it; willingly or not...§!\n"
 
-	TEC_ETHIC_ALLOWS_TARGET_SELECT_POLICY:0 "§EAllows §HTactical Targeting§! policy§!"
+	TEC_ETHIC_MILITARIST_EDICT:0 "§HEdict Bonus:§! Allows the use of the £mod_country_edict_fund_add£ §Y['concept_tec_edict_doing_your_part']§! edict"
+	TEC_ETHIC_MILITARIST_POLICY:0 "§HPolicy Bonus:§! Has access to the £political_power£ §Y['concept_tec_ethic_policy_militarist']§!"
+	TEC_ETHIC_MILITARIST_MECHANIC:0 "§HMechanic Bonus:§! TO DO"
 
 	# Pacif
 	ethic_pacifist:0 "Pacifist"
@@ -176,7 +190,9 @@
 	ethic_fanatic_pacifist:0 "Fanatic Pacifist"
 	ethic_fanatic_pacifist_desc:0 "§LAs civilized beings, the end of all armed conflict and the unity of our own for true prosperity should be our primary concern. War is an evolutionary dead end, as futile as it is wasteful.§!\n"
 
-	TEC_ETHIC_ALLOWS_PEACE_FESTIVALS:0 "§EAllows §HPeace Festival§! edict§!"
+	TEC_ETHIC_PACIFIST_EDICT:0 "§HEdict Bonus:§! Allows the use of the £mod_country_edict_fund_add£ §Y['concept_tec_edict_peace_festivals']§! edict"
+	TEC_ETHIC_PACIFIST_POLICY:0 "§HPolicy Bonus:§! Has access to the £political_power£ §Y['concept_tec_ethic_policy_pacifist']§!"
+	TEC_ETHIC_PACIFIST_MECHANIC:0 "§HMechanic Bonus:§! TO DO"
 
 	# Spi
 	ethic_spiritualist:0 "Spiritualist"
@@ -190,10 +206,11 @@
 	ethic_fanatic_spiritualist:0 "Fanatic Spiritualist"
 	ethic_fanatic_spiritualist_desc:0 "§LOur science has proved that Consciousness begets reality. It is within our core values to prove the divine in life, in tradition, in our very faith.§!\n"
 
-	TEC_ETHIC_ALLOWS_VENERATION_SAINTS:0 "§EAllows §HVeneration of the Saints§! edict§!"
-	TEC_ETHIC_ALLOWS_TEMPLE:0 "§ECan build §HTemple§! buildings on any planet and §HFaith§! Arcologies on Ecumenopolis§!"
-	TEC_ETHIC_ALLOWS_FAITH_POLICIES:0 "§EAllows £job_priest£ §HCult Focus§! policies§!"
 	TEC_ETHIC_DISALLOW_AI:0 "§ECannot use §HFull AI Rights§! policy, unless certain requirements are met§!"
+
+	TEC_ETHIC_SPIRITUALIST_EDICT:0 "§HEdict Bonus:§! Allows the use of the £mod_country_edict_fund_add£ §Y['concept_tec_edict_veneration_of_the_saints']§! edict"
+	TEC_ETHIC_SPIRITUALIST_POLICY:0 "§HPolicy Bonus:§! Has access to the £political_power£ §Y['concept_tec_ethic_policy_spiritualist']§!"
+	TEC_ETHIC_SPIRITUALIST_MECHANIC:0 "§HMechanic Bonus:§! Can build §H['concept_tec_ethic_building_temple']§! buildings on any planet and §EFaith Arcologies§! on Ecumenopoleis"
 
 	# Mat
 	ethic_materialist:0 "Materialist"
@@ -207,7 +224,12 @@
 	ethic_fanatic_materialist:0 "Fanatic Materialist"
 	ethic_fanatic_materialist_desc:0 "§LAlthough it hurts, we must grow up and put aside our outdated notions of morality. There is no ''divine spark'' granting special value to a living mind; no object has any intrinsic value apart from what we choose to grant it. Let us embrace the freedom of certitude, and achieve maximum efficiency in all things!§!\n"
 
-	TEC_ETHIC_ALLOWS_SCIENCE_DIV:0 "§EAllows £trigger_tec_research£ §HResearch focus§! policy§!"
+	TEC_ETHIC_DISALLOW_BAN_AI_OR_ROBOTS:0 "§ECannot §HOutlaw AI§! or §HRobotic Workers§! §!"
+
+	TEC_ETHIC_MATERIALIST_LIVING_STANDARD:0 "§HLiving Standard:§! Allows §Y['concept_tec_living_standard_academic']§! Living Standards"
+	TEC_ETHIC_MATERIALIST_EDICT:0 "§HEdict Bonus:§! Allows the use of the £mod_country_edict_fund_add£ §Y['concept_tec_edict_technological_funding']§! edict"
+	TEC_ETHIC_MATERIALIST_POLICY:0 "§HPolicy Bonus:§! Has access to the £political_power£ §Y['concept_tec_ethic_policy_materialist']§!"
+	TEC_ETHIC_MATERIALIST_MECHANIC:0 "§HMechanic Bonus:§! Can build §H['concept_tec_ethic_building_experimental_labs']§! buildings"
 
  # /
  # Evolved
@@ -226,6 +248,11 @@
 	TEC_ETHIC_ALLOWS_SOCIAL_WORKERS_EDICT:0 "This empire can't have §E£default£ §HUnemployed pops§!. Instead, they become £job_tec_social_worker£ Social Workers which provide £amenities£ £trade_value£ £unity£ different resources based on the planet designation.§!"
 	TEC_ETHIC_ALLOWS_SOCIAL_STATE_EDICT:0 "§EAllows §HSocial State§! edict§!"
 
+	TEC_ETHIC_COOPERATIVE_LIVING_STANDARD:0 "§HLiving Standard:§! Allows §Y['concept_tec_living_standard_utopian']§! Living Standards"
+	TEC_ETHIC_COOPERATIVE_EDICT:0 "§HEdict Bonus:§! Allows the use of the £mod_country_edict_fund_add£ §Y['concept_tec_edict_social_benefits']§! edict"
+	TEC_ETHIC_COOPERATIVE_POLICY:0 "§HPolicy Bonus:§! Has access to the £political_power£ §Y['concept_tec_ethic_policy_cooperative']§!"
+	TEC_ETHIC_COOPERATIVE_MECHANIC:0 "§HMechanic Bonus:§! TO DO"
+
 	# Comp
 	ethic_capitalism:0 "Competitive"
 	ethic_capitalism_plural:0 "Competitive"
@@ -240,6 +267,11 @@
 
 	TEC_ETHIC_INDIVIDUALIST_BUILDINGS:0 "§ECan build £building£ §HEntrepreneur buildings§!, less effective but cheaper worker alternatives to some specialist buildings§!"
 
+	TEC_ETHIC_COMPETITIVE_LIVING_STANDARD:0 "§HLiving Standard:§! Allows §Y['concept_tec_living_standard_stratified']§! Living Standards"
+	TEC_ETHIC_COMPETITIVE_EDICT:0 "§HEdict Bonus:§! Allows the use of the £mod_country_edict_fund_add£ §Y['concept_tec_edict_market_funding']§! edict"
+	TEC_ETHIC_COMPETITIVE_POLICY:0 "§HPolicy Bonus:§! Has access to the £political_power£ §Y['concept_tec_ethic_policy_competitive']§!"
+	TEC_ETHIC_COMPETITIVE_MECHANIC:0 "§HMechanic Bonus:§! Can build £building£ §H['concept_tec_ethic_building_entepreneur']§! on any planet"
+
 	# Ecologist
 	ethic_green:0 "Ecologist"
 	ethic_green_plural:0 "Ecologists"
@@ -253,9 +285,15 @@
 	ethic_fanatic_green_desc:1 "§LOur musicians cannot compose a melody so profound as the songs of wildlife and the whispers of the trees. Our artists cannot capture the ineffable majesty of mountain tops, secluded lakes, or vast caverns. Whether by design or by chance, we have been born into a universe of transcendent natural beauty.§!\n"
 
 	TEC_ETHIC_ALLOWS_FOOD_CG:0 "§EAllows §HEcological§! £consumer_goods£ Consumer Goods §Hpolicy option§!§!"
-	TEC_ETHIC_NOT_ALLOWS_FOOD_CG:0 "§ECannot use §HIndustrial§! £consumer_goods£ Consumer Goods §Hpolicy option§!§!"
+	TEC_ETHIC_FORBIDS_INDUSTRIAL_CG:0 "§ECannot use §HIndustrial§! £consumer_goods£ Consumer Goods §Hpolicy option§!§!"
 	TEC_FREE_ECOWORLDS:0 "§ECan create ['concept_tec_ecoworlds'] without requiring §HMastery of Nature§! ascension perk.§!"
 	TEC_FORBIDS_ECUMENOPOLIS:0 "§ECannot create ['concept_tec_ecumenopoleis'].§!"
+
+	#TEC_ETHIC_ECOLOGIST_LIVING_STANDARD:0 "§HLiving Standard:§! Allows §Y['concept_tec_living_standard_stratified']§! Living Standards"
+	TEC_ETHIC_ECOLOGIST_EDICT:0 "§HEdict Bonus:§! Allows the use of the £mod_country_edict_fund_add£ §Y['concept_tec_edict_nature_bond']§! edict"
+	TEC_ETHIC_ECOLOGIST_POLICY:0 "§HPolicy Bonus:§! Has access to the £political_power£ §Y['concept_tec_ethic_policy_ecologist']§!"
+	TEC_ETHIC_ECOLOGIST_MECHANIC:0 "§HMechanic Bonus:§! Can create ['concept_tec_ecoworlds']. Require §HMastery of Nature§! ascension perk for further specialization of those worlds\nAllows §BEcological§! ( £food£ > £consumer_goods£ ) Consumer Goods §BPolicy§! option"
+	TEC_ETHIC_FANATIC_ECOLOGIST_MECHANIC:0 "§HMechanic Bonus:§! Can create and specialize ['concept_tec_ecoworlds'] without requiring the §HMastery of Nature§! ascension perk\nAllows §BEcological§! ( £food£ > £consumer_goods£ ) Consumer Goods §BPolicy§! option"
 
 	# Industrial
 	ethic_industrial:0 "Industrialist"
@@ -274,6 +312,11 @@
 	TEC_FREE_ECUMENOPOLIS:0 "§E§HArcology project§! decision has §Yhalf§! the regular £influence£ Influence cost.§!"
 	TEC_FORBIDS_ECOWORLDS:0 "§ECannot create ['concept_tec_ecoworlds'].§!"
 
+	#TEC_ETHIC_INDUSTRIALIST_LIVING_STANDARD:0 "§HLiving Standard:§! Allows §Y['concept_tec_living_standard_stratified']§! Living Standards"
+	TEC_ETHIC_INDUSTRIALIST_EDICT:0 "§HEdict Bonus:§! Allows the use of the £mod_country_edict_fund_add£ §Y['concept_tec_edict_industrial_overproduction']§! edict"
+	TEC_ETHIC_INDUSTRIALIST_POLICY:0 "§HPolicy Bonus:§! Has access to the £political_power£ §Y['concept_tec_ethic_policy_industrialist']§!"
+	TEC_ETHIC_INDUSTRIALIST_MECHANIC:0 "§HMechanic Bonus:§! Allows £minerals£ §EMining Subsidizing§! and £alloys£ £consumer_goods£ §EIndustrial Subsidizing§! £trade_value£ trade §EPolicy§! options"
+
 	# Elitist
 	ethic_elitist:0 "Elitist"
 	ethic_elitist_plural:0 "Elitists"
@@ -289,6 +332,12 @@
 	TEC_ETHIC_FAN_ELITIST_LEADER_BONUS:0 "§EAll recruited leaders will gain §H2§! additional levels. Capped at §H+3§! initial levels.§!"
 	TEC_ETHIC_ELITIST_LEADER_BONUS:0 "§EAll recruited leaders will gain §H1§! additional level. Capped at §H+3§! initial levels.§!"
 	TEC_ETHIC_ELITIST_BONUS:0 "§ENew leaders are less prone to gain §Hbad traits§! when they level up§!"
+
+	TEC_ETHIC_ELITIST_LIVING_STANDARD:0 "§HLiving Standard:§! Allows §Y['concept_tec_living_standard_academic']§! Living Standards"
+	TEC_ETHIC_ELITIST_EDICT:0 "§HEdict Bonus:§! Allows the use of the £mod_country_edict_fund_add£ §Y['concept_tec_edict_elite_boosting']§! edict"
+	TEC_ETHIC_ELITIST_POLICY:0 "§HPolicy Bonus:§! Has access to the £political_power£ §Y['concept_tec_ethic_policy_elitist']§!"
+	TEC_ETHIC_FANATIC_ELITIST_MECHANIC:0 "§HMechanic Bonus:§! Leaders have a §G100%§! reduced chance of gaining a §HNegative Trait§!"
+	TEC_ETHIC_ELITIST_MECHANIC:0 "§HMechanic Bonus:§! Leaders have a §G50%§! reduced chance of gaining a §HNegative Trait§!"
 
 	# Pluralist
 	ethic_pluralist:0 "Pluralist"
@@ -306,58 +355,17 @@
 	TEC_ETHIC_ALLOWS_LEADER_XP:0 "§EAll leaders will gain a §HSmall§! amount of experience yearly, §HDoubled§! for actively employed leaders, up to level §H3§!.§!"
 	TEC_ETHIC_FORBIDS_MEGACORP:0 "§EForbid §HCorporate§! Authorities§!"
 
+	TEC_ETHIC_PLURALIST_LIVING_STANDARD:0 "§HLiving Standard:§! Allows §Y['concept_tec_living_standard_utopian']§! Living Standards"
+	TEC_ETHIC_PLURALIST_EDICT:0 "§HEdict Bonus:§! Allows the use of the £mod_country_edict_fund_add£ §Y['concept_tec_edict_equal_opportunities']§! edict"
+	TEC_ETHIC_PLURALIST_POLICY:0 "§HPolicy Bonus:§! Has access to the £political_power£ §Y['concept_tec_ethic_policy_pluralist']§!"
+	TEC_ETHIC_PLURALIST_MECHANIC:0 "§HMechanic Bonus:§! Leaders gain a small amount of §HMonthly Experience§! up to §HLevel 3§!. Non active leaders gain double the amount"
+	TEC_ETHIC_FANATIC_PLURALIST_MECHANIC:0 "§HMechanic Bonus:§! Leaders gain a small amount of §HMonthly Experience§! up to §HLevel 6§!. Non active leaders gain double the amount"
+
 	# Not added
 	ethic_individualist_desc:1 "§LEveryone is equal in basic dignity and rights. The preservation of order, while an admirable goal, does not justify tyranny and oppression either in principle or in practice. Civilization flourishes best when the few do not dominate the many.§!\n"
 	ethic_fanatic_individualist_desc:1 "§LPower does not just corrupt; it is, itself, corruption. All power imbalances are fundamentally coercive by the nature of power. True freedom and justice can only be obtained through equality.§!\n"
  # /
 # /
-
-# ------------------------------------------------- REGULAR
-#spiritualist
-
-
-#green bonus
-
-
-#Industrial
-
-#Materialist bonus
-
-
-#Elitist - add academic privilege
-
-
-#Individualist - Competitive
-
-
-
-# Authoritarian edict
-
-
-# Egalitarian edict
-
-
-# Xenophobe Edict
-
-
-# Xenophile edict
-
-
-# Militarist damage edict
-
-
-# Pacifist edict
-
-
-# Spiritualist edict
-
-
-# Collaborative edict
-
-
-
-# Pluralist greater than ourselves like
-
 
 # ------------------------------------------------- GESTALTS
 #phile
@@ -974,18 +982,18 @@
 	POP_ATTRACTION_TALENTED_NEG:0 "§R- Talented Pops in Empire§!"
 	
 	POP_ATTRACTION_LIMITED_CITIZEN_POS:0 "§G+ Limited Citizen Pops in Empire§!"
-	POP_ATTRACTION_ELITIST_POS:0 "§G+ Elitist Governing	ethics§!"
+	POP_ATTRACTION_ELITIST_POS:0 "§G+ Elitist Governing	Ethics§!"
 	POP_ATTRACTION_PLURALIST_POS:0 "§G+ Pluralist Governing	ethics§!"
 	POP_ATTRACTION_ENHANCED_LEADERS_POS:0 "§G+ Leader Enhancement Policy in Empire§!"
 	
 	
-	mod_pop_ethic_industrial_attraction_mult:0 "$ethic_industrial$	ethics Attraction"
-	mod_pop_ethic_green_attraction_mult:0 "$ethic_green$	ethics Attraction"
-	mod_pop_ethic_capitalism_attraction_mult:0 "$ethic_capitalism$	ethics Attraction"
-	mod_pop_ethic_socialism_attraction_mult:0 "$ethic_socialism$	ethics Attraction"
-	mod_pop_ethic_elitist_attraction_mult:0 "$ethic_elitist$	ethics Attraction"
-	mod_pop_ethic_pluralist_attraction_mult:0 "$ethic_pluralist$	ethics Attraction" 
-	mod_pop_ethic_egalitarian_attraction_mult:0 "$ethic_egalitarian$	ethics Attraction"
+	mod_pop_ethic_industrial_attraction_mult:0 "$ethic_industrial$ Ethics Attraction"
+	mod_pop_ethic_green_attraction_mult:0 "$ethic_green$ Ethics Attraction"
+	mod_pop_ethic_capitalism_attraction_mult:0 "$ethic_capitalism$ Ethics Attraction"
+	mod_pop_ethic_socialism_attraction_mult:0 "$ethic_socialism$ Ethics Attraction"
+	mod_pop_ethic_elitist_attraction_mult:0 "$ethic_elitist$ Ethics Attraction"
+	mod_pop_ethic_pluralist_attraction_mult:0 "$ethic_pluralist$ Ethics Attraction" 
+	mod_pop_ethic_egalitarian_attraction_mult:0 "$ethic_egalitarian$ Ethics Attraction"
 
 	BIOSERVANTS_CANNOT_COLONIZE:0 "$TRIGGER_FAIL$ The £society_research£ §Y$tech_tec_bioservant_2$§! technology is required to colonize with Bioservants."
 
