--- a/localisation/english/replace/zz_evolved_replace_l_english.yml
+++ b/localisation/english/replace/zz_evolved_replace_l_english.yml
@@ -185,6 +185,8 @@ job_pearl_diver_effect_desc:1 "['concept_tec_job_pearl_diver_plural_icon'] turn 
 
  decision_tec_ecoarcology_blocker_tweaks:0 "£trigger_no£ §RRequires NO £blocker£ Blockers on the planet, unless the empire §YBenefits§! from them."
 
+ decision_tec_ecoarcology_require_mastery_of_nature:0 "£trigger_no£ §RRequires the $ap_mastery_of_nature$ ascension for specializing the Ecoworld."
+
  decision_tec_ecoarcology_no_swarm:0 "£trigger_no£ §RWe want to devour, not preserve the biosphere of a planet."
 
 # MECHANICS replaces
