--- a/localisation/english/zz_evolved_concepts_l_english.yml
+++ b/localisation/english/zz_evolved_concepts_l_english.yml
@@ -84,6 +84,7 @@
 	concept_tec_leader_civic: "Leader Civic"
 	concept_tec_leader_civics: "Leader Civics"
 	concept_tec_leader_civic_desc: "Leader civics are mutually exclusive, usually making §YLeaders§! of a specific type produce resources depending on their leader level and some other factors, while also removing the upkeep."
+# /
 
 # General
 	concept_tec_prime_drone: "Prime Drone"
@@ -149,6 +150,7 @@
 	concept_tec_environment_preserve: "$decision_tec_environment_preserve$"
 	concept_tec_environment_preserve_icon: "£stability£ $decision_tec_environment_preserve$"
 	concept_tec_environment_preserve_desc: "$decision_tec_environment_preserve_effects$"
+# /
 
 # Jobs
 	concept_tec_job_angler: "$job_angler$"
@@ -210,6 +212,7 @@
 	concept_tec_job_tec_hydrorelay_drone_plural: "$job_tec_hydrorelay_drone_plural$"
 	concept_tec_job_tec_hydrorelay_drone_plural_icon: "£job_tec_hydrorelay_drone£ $job_tec_hydrorelay_drone_plural$"
 	concept_tec_job_tec_hydrorelay_drone_desc: "Stratum: §Y$pop_cat_complex_drone$§!\n$tec_loc_amenities_gestalt$: §G+4§!\nProduces: §Y£physics_research£ 6§!" 
+# /
 
 # Foundry
 	concept_tec_job_foundry: "$job_foundry$"
@@ -265,6 +268,7 @@
 	concept_tec_job_fabricator_quantum_plural: "$job_fabricator_plural$"
 	concept_tec_job_fabricator_quantum_plural_icon: "£job_fabricator£ $job_fabricator_plural$"
 	concept_tec_job_fabricator_quantum_desc: "Stratum: §Y$pop_cat_complex_drone$§!\nProduces: §Y£alloys£ 4§!\nUpkeep: §Y£minerals£ 4 £energy£ 6.6§!"
+# /
 
 # Artisan
 	concept_tec_job_artisan: "$job_artisan$"
@@ -284,6 +288,7 @@
 	concept_tec_job_artisan_drone_plural: "$job_artisan_drone_plural$"
 	concept_tec_job_artisan_drone_plural_icon: "£job_artisan_drone£ $job_artisan_drone_plural$"
 	concept_tec_job_artisan_drone_desc: "Stratum: §Y$pop_cat_complex_drone$§!\nProduces: §Y£consumer_goods£ 6§!\nUpkeep: §Y£minerals£ 6§!"
+# /
 
 ## Districts
 	tec_part_concept_is_specialized: "If specialized:\n  $tec_loc_housing$: §G+3§!\n  "
@@ -482,4 +487,152 @@
 	concept_tec_district_tec_eco_aqua_farming_hive_plural: "$district_tec_eco_aqua_farming_plural$"
 	concept_tec_district_tec_eco_aqua_farming_hive_plural_icon: "£district£ $district_tec_eco_aqua_farming_plural$"
 	concept_tec_district_tec_eco_aqua_farming_hive_desc: "$tec_loc_housing$: §G+3§!\n£mod_job_angler_add£ $mod_job_tec_aqua_drone_add$: §G+3§!\n£mod_job_tec_depth_drone_add£ $mod_job_tec_depth_drone_add$: §G+1§!\n$tec_part_concept_is_specialized$£mod_job_artisan_drone_add£ $mod_job_artisan_drone_add$: §G+3§!\n\n$job_tec_aqua_drone_effect_desc$\n$job_tec_depth_drone_effect_desc$\n$job_artisan_drone_effect_desc$\n\n['concept_tec_district_farming_variants']"
+# /
+
+# Ethics
+ # Living Standards
+	concept_tec_living_standard_utopian: "Utopian"
+	concept_tec_living_standard_utopian_alias: "Utopian Living Standard"
+	concept_tec_living_standard_utopian_desc: "TO DO"
+
+	concept_tec_living_standard_stratified: "Stratified"
+	concept_tec_living_standard_stratified_alias: "Stratified Living Standard"
+	concept_tec_living_standard_stratified_desc: "TO DO"
+
+	concept_tec_living_standard_academic: "Academic Privilege"
+	concept_tec_living_standard_academic_alias: "Academic Privilege Living Standard"
+	concept_tec_living_standard_academic_desc: "TO DO"
+ # /
+ # Edict
+	concept_tec_edict_encourage_thought: "Encourage Thought"
+	concept_tec_edict_encourage_thought_alias: "Encourage Thought Edict"
+	concept_tec_edict_encourage_thought_desc: "TO DO"
+
+	concept_tec_edict_information_quarantine: "Information Quarantine"
+	concept_tec_edict_information_quarantine_alias: "Information Quarantine Edict"
+	concept_tec_edict_information_quarantine_desc: "TO DO"
+
+	concept_tec_edict_fear_campaign: "Fear Campaign"
+	concept_tec_edict_fear_campaign_alias: "Fear Campaign Edict"
+	concept_tec_edict_fear_campaign_desc: "TO DO"
+
+	concept_tec_edict_land_of_opportunity: "Land of Opportunity"
+	concept_tec_edict_land_of_opportunity_alias: "Land of Opportunity Edict"
+	concept_tec_edict_land_of_opportunity_desc: "TO DO"
+
+	concept_tec_edict_doing_your_part: "Doing your Part"
+	concept_tec_edict_doing_your_part_alias: "Doing your Part Edict"
+	concept_tec_edict_doing_your_part_desc: "TO DO"
+
+	concept_tec_edict_peace_festivals: "Peace Festivals"
+	concept_tec_edict_peace_festivals_alias: "Peace Festivals Edict"
+	concept_tec_edict_peace_festivals_desc: "TO DO"
+
+	concept_tec_edict_veneration_of_the_saints: "Veneration of the Saints"
+	concept_tec_edict_veneration_of_the_saints_alias: "Veneration of the Saints Edict"
+	concept_tec_edict_veneration_of_the_saints_desc: "TO DO"
+
+	concept_tec_edict_technological_funding: "Technological Funding"
+	concept_tec_edict_technological_funding_alias: "Technological Funding Edict"
+	concept_tec_edict_technological_funding_desc: "TO DO"
+
+	concept_tec_edict_social_benefits: "Social Benefits"
+	concept_tec_edict_social_benefits_alias: "Social Benefits Edict"
+	concept_tec_edict_social_benefits_desc: "TO DO"
+
+	concept_tec_edict_market_funding: "Market Funding"
+	concept_tec_edict_market_funding_alias: "Market Funding Edict"
+	concept_tec_edict_market_funding_desc: "TO DO"
+
+	concept_tec_edict_nature_bond: "Nature Bond"
+	concept_tec_edict_nature_bond_alias: "Nature Bond Edict"
+	concept_tec_edict_nature_bond_desc: "TO DO"
+
+	concept_tec_edict_industrial_overproduction: "Industrial Overproduction"
+	concept_tec_edict_industrial_overproduction_alias: "Industrial Overproduction Edict"
+	concept_tec_edict_industrial_overproduction_desc: "TO DO"
+
+	concept_tec_edict_elite_boosting: "Elite Boosting"
+	concept_tec_edict_elite_boosting_alias: "Elite Boosting Edict"
+	concept_tec_edict_elite_boosting_desc: "TO DO"
+
+	concept_tec_edict_equal_opportunities: "Equal Opportunities"
+	concept_tec_edict_equal_opportunities_alias: "Equal Opportunities Edict"
+	concept_tec_edict_equal_opportunities_desc: "TO DO"
+ # /
+ # Policy
+	concept_tec_ethic_policy_egalitarian: "$ethic_egalitarian$ Policies"
+	concept_tec_ethic_policy_egalitarian_alias: "$concept_tec_ethic_policy_egalitarian$"
+	concept_tec_ethic_policy_egalitarian_desc: "TO DO"
+
+	concept_tec_ethic_policy_authoritarian: "$ethic_authoritarian$ Policies"
+	concept_tec_ethic_policy_authoritarian_alias: "$concept_tec_ethic_policy_authoritarian$"
+	concept_tec_ethic_policy_authoritarian_desc: "TO DO"
+
+	concept_tec_ethic_policy_xenophobe: "$ethic_xenophobe$ Policies"
+	concept_tec_ethic_policy_xenophobe_alias: "$concept_tec_ethic_policy_xenophobe$"
+	concept_tec_ethic_policy_xenophobe_desc: "TO DO"
+
+	concept_tec_ethic_policy_xenophile: "$ethic_xenophile$ Policies"
+	concept_tec_ethic_policy_xenophile_alias: "$concept_tec_ethic_policy_xenophile$"
+	concept_tec_ethic_policy_xenophile_desc: "TO DO"
+
+	concept_tec_ethic_policy_militarist: "$ethic_militarist$ Policies"
+	concept_tec_ethic_policy_militarist_alias: "$concept_tec_ethic_policy_militarist$"
+	concept_tec_ethic_policy_militarist_desc: "TO DO"
+
+	concept_tec_ethic_policy_pacifist: "$ethic_pacifist$ Policies"
+	concept_tec_ethic_policy_pacifist_alias: "$concept_tec_ethic_policy_pacifist$"
+	concept_tec_ethic_policy_pacifist_desc: "TO DO"
+
+	concept_tec_ethic_policy_spiritualist: "$ethic_spiritualist$ Policies"
+	concept_tec_ethic_policy_spiritualist_alias: "$concept_tec_ethic_policy_spiritualist$"
+	concept_tec_ethic_policy_spiritualist_desc: "TO DO"
+
+	concept_tec_ethic_policy_materialist: "Research Focus Policies"
+	concept_tec_ethic_policy_materialist_alias: "$concept_tec_ethic_policy_materialist$"
+	concept_tec_ethic_policy_materialist_desc: "TO DO"
+
+	concept_tec_ethic_policy_cooperative: "Cooperative Policies"
+	concept_tec_ethic_policy_cooperative_alias: "$concept_tec_ethic_policy_cooperative$"
+	concept_tec_ethic_policy_cooperative_desc: "TO DO"
+
+	concept_tec_ethic_policy_competitive: "Competitive Policies"
+	concept_tec_ethic_policy_competitive_alias: "$concept_tec_ethic_policy_competitive$"
+	concept_tec_ethic_policy_competitive_desc: "TO DO"
+
+	concept_tec_ethic_policy_ecologist: "$ethic_green$ Policies"
+	concept_tec_ethic_policy_ecologist_alias: "$concept_tec_ethic_policy_ecologist$"
+	concept_tec_ethic_policy_ecologist_desc: "TO DO"
+
+	concept_tec_ethic_policy_industrialist: "$ethic_industrial$ Policies"
+	concept_tec_ethic_policy_industrialist_alias: "$concept_tec_ethic_policy_industrialist$"
+	concept_tec_ethic_policy_industrialist_desc: "TO DO"
+
+	concept_tec_ethic_policy_elitist: "$ethic_elitist$ Policies"
+	concept_tec_ethic_policy_elitist_alias: "$concept_tec_ethic_policy_elitist$"
+	concept_tec_ethic_policy_elitist_desc: "TO DO"
+
+	concept_tec_ethic_policy_pluralist: "$ethic_pluralist$ Policies"
+	concept_tec_ethic_policy_pluralist_alias: "$concept_tec_ethic_policy_pluralist$"
+	concept_tec_ethic_policy_pluralist_desc: "TO DO"
+ # /
+ # Buildings
+	concept_tec_ethic_building_temple: "Temples"
+	concept_tec_ethic_building_temple_alias: "Temple Buildings"
+	concept_tec_ethic_building_temple_desc: "TO DO"
+
+	concept_tec_ethic_building_experimental_labs: "Experimental Labs"
+	concept_tec_ethic_building_experimental_labs_alias: "Experimental Lab Buildings"
+	concept_tec_ethic_building_experimental_labs_desc: "TO DO"
+
+	concept_tec_ethic_building_entepreneur: "Entepreneur Buildings"
+	concept_tec_ethic_building_entepreneur_alias: "Entepreneur Buildings"
+	concept_tec_ethic_building_entepreneur_desc: "TO DO"
+ # /
+ # Buildings
+	concept_tec_ethic_job_social_workers: "Social Workers"
+	concept_tec_ethic_job_social_workers_alias: "Social Worker Jobs"
+	concept_tec_ethic_job_social_workers_desc: "TO DO"
+ # /
 # /
