updated leader traits + more missing ldr engine

--- a/localisation/english/replace/zz_evolved_traits_l_english.yml
+++ b/localisation/english/replace/zz_evolved_traits_l_english.yml
@@ -182,6 +182,8 @@
 	trait_tec_pu_neuroslug:0 "Neuro-Symbiote"
 	trait_tec_pu_neuroslug_desc:0 "§LThis species has a symbiotic relation with a parasite, which greatly improves each member at a high metabolic cost.§!\n"
 	TRAIT_TEC_PU_NEUROSLUG_EFFECT:0 "$mod_planet_pops_all_basic_upkeep_add$: §R+0.5§!"
+	leader_trait_tec_pu_neuroslug:0 "$trait_tec_pu_neuroslug$"
+	leader_trait_tec_pu_neuroslug_desc:0 "§LThis leader has a special connection with the Neuro-Symbiote, increasing its mental capacities enormously.§!\n"
 
 	leader_trait_admiral_tec_pu_neuroslug:0 "$trait_tec_pu_neuroslug$"
 	leader_trait_admiral_tec_pu_neuroslug_desc:0 "§LThis leader has a special connection with the Neuro-Symbiote for subspace fleet command.§!"
@@ -231,7 +233,10 @@
 # ------------------------------------------------------------
 	trait_tec_clone_origin:0 "Cloning Template"
 	trait_tec_clone_origin_desc:0 "§LVia genetic manipulation, this species developed a perfected clone template which allows them to easily manipulate how their individuals are growth and cloned in vats, at the cost of a specially lower birth rate and general lifespan.§!\n"
-	TRAIT_TEC_CLONEORIGIN_EFFECT:0 "§YThis trait generates special leader traits for members of this species.§!"
+	TRAIT_TEC_CLONE_ORIGIN_EFFECT:0 "§YThis trait generates special leader traits for members of this species.§!"
+	leader_trait_tec_clone_origin:0 "$trait_tec_clone_origin$"
+	leader_trait_tec_clone_origin_desc:0 "This leader has been engineered and designed pre-conception, during breed and post creation to serve within a batch of efficient clones."
+
 	# Secondary
 	trait_tec_clone_overcloning:0 "Forced Mitosis"
 	trait_tec_clone_overcloning_desc:0 "§LTO DO.§!\n"
@@ -563,8 +568,8 @@
 	trait_tec_gene_audacious_desc:0 "§LCreative capacities of this species surpass the expected on perfection, making anything better with meticulous and precise work.§!"
 	TRAIT_TEC_GENE_AUDACIOUS_EFFECT:0 "§YThis trait generates special leader traits for some §YRulers§! and §YScientists§! of this species.§!"
 	# Note: Governor - General - Admiral
-	leader_trait_general_tec_gene_audacious:0 "$trait_tec_gene_audacious$"
-	leader_trait_general_tec_gene_audacious_desc:0 "§LWith extreme strength and mental haste, this general command armies in the same way; a really offensive and effective way, minimizing time in battle while maximizing the damage done to the enemy.§!"
+	leader_trait_tec_gene_audacious:0 "$trait_tec_gene_audacious$"
+	leader_trait_tec_gene_audacious_desc:0 "§LWith extreme strength and mental haste, this leader command its kind in the same way; in an aggressive and effective way, minimizing time in battle while maximizing the damage done to the enemy, in all fields.§!"
 
 # ------------------------------------------------- BIOGENICS
 	# xenotransplantation
@@ -696,6 +701,8 @@
  # --------------- T2
 	trait_tec_superior_cybernetics_main:0 "Superior Cybernetics"
 	trait_tec_superior_cybernetics_main_desc:0 "§LThis species has reached such an scale of cybernetic modifications that they are completely dependant of them, being perfected and advanced cyborgs, improved with the state-of-the-art mechanical implants.§!\n"
+	leader_trait_tec_superior_cybernetics_main:0 "$trait_tec_superior_cybernetics_main$"
+	leader_trait_tec_superior_cybernetics_main_desc:0 "§LThis Leader has been heavily augmented with extremely sophisticated cybernetic implants serving as direct proxies, relays and receivers to cyber-neural databases across the entire empire territory and far beyond.§!"
 
 	trait_tec_cyborg_specialist:0 "Augmented Devices"
 	trait_tec_cyborg_specialist_desc:0 "§LSophisticated prothesis and devices are integrated in the body of this species, exchanging general effectivity in menial or simple tasks with the performance of top-notch systems and cybernetic augmentations.§!"
@@ -818,8 +825,8 @@
 	trait_tec_replicant_main:0 "Replicant"
 	trait_tec_replicant_main_desc:0 "§LThis species has been altered at a cellular level with advanced nanomachines that act in symbiotic relationship with organic counterparts, being a mix of both worlds and making it impervious to aging, climatic conditions and the restrictions of organic and mechanic design.§!"
 	trait_tec_replicant_main_EFFECT:0 "£pop£ Habitability: §R+100%§!\n£pop£ Jobs production: §R+10%§!\nLeaders are §YImmortal§!.\n"
-	leader_trait_tec_replicant:0 "$trait_tec_replicant_main$"
-	leader_trait_tec_replicant_desc:0 "§LNot purely organic nor synthetic, this leader is able to process and study information and databases with its neo-neural/synthetic hybrid receivers at real-time, serving as a living interface to control and improve its society.§!"
+	leader_trait_tec_replicant_main:0 "$trait_tec_replicant_main$"
+	leader_trait_tec_replicant_main_desc:0 "§LNot purely organic nor synthetic, this leader is able to process and study information and databases with its neo-neural/synthetic hybrid receivers at real-time, serving as a living interface to control and improve its society.§!"
 
 	#trait_tec_replicant_firstgen:0 "Proto-Replicant"
 	#trait_tec_replicant_firstgen_desc:0 "§LThis species has been altered at a cellular level, forming a deep biomechanical bonding where artificial cells work in symbiotic relationship with organic counterparts. However, the change made this species susceptible to rapid deterioration without constant maintenance.§!"
@@ -900,6 +907,8 @@
  # --------------- T2
 	trait_tec_biopsionic_main:0 "Psionic Purity"
 	trait_tec_biopsionic_main_desc:0 "§LHarmony of body, mind and soul, reached in the purest of forms.§!"
+	leader_trait_tec_biopsionic_main:0 "$trait_tec_biopsionic_main$"
+	leader_trait_tec_biopsionic_main_desc:0 "§LWith a incredible biological and psionic prowess, this Leader shows extreme dextery in near any field, showing unimaginable mental and physical capacities.§!"
 
 	mod_trait_tec_biopsionic_main_tooltip:0 "[trait_tec_biopsionic_first_module][trait_tec_biopsionic_second_module]"
 
@@ -961,6 +970,9 @@
 	trait_tec_cyberpsionic_main:0 "Infused Cybernetics"
 	trait_tec_cyberpsionic_main_desc:0 "§LThis species has achieved an exotic combination; Using cybernetics they harness and unlock their psionic potential by completely overcharging both their bodies and their minds.§!"
 	TRAIT_TEC_CYBERPSIONIC_MAIN_EFFECT:0 "£trigger_tec_research£ Research Output: §G+20%§!\nLeader Experience Gain: §G+25%§!\n$tec_loc_energy$ Upkeep: §R+0.4§!"
+	leader_trait_tec_cyberpsionic_main:0 "$trait_tec_cyberpsionic_main$"
+	leader_trait_tec_cyberpsionic_main_desc:0 "§LThis leader has internal high-performance experimental cybernetic implants, enhanced and synchronzed with psionic components and capacities, amplifying existing mental capacities to unknown extremes.§!"
+
 	# Versatile
 	# 25 years lifespan
 	# psionic produces mult
@@ -1052,47 +1064,52 @@
 # ------------------------------------------------- CIVICS
  # --------------- Patronage - Prodigies
 	# 15% fleet speed and 10% fleet evasion # 10% fleet damage #10% army damage and 20% army evasion
-	leader_trait_admiral_tec_prodigy_move:0 "Prodigy: Starseeker"
-	leader_trait_admiral_tec_prodigy_move_desc:0 "§LThis Admiral has developed special skills from a young age, understanding how certain reactors and thrusters works and applying that knowledge for fleet movement.§!"
-	leader_trait_admiral_tec_prodigy_emulators:0 "Prodigy: Simulator knowledge"
-	leader_trait_admiral_tec_prodigy_emulators_desc:0 "§LThis Admiral has developed special skills from a young age, playing grand strategy 8k holo-games, applying unusual fleet formations and tactics.§!"
+	leader_trait_tec_prodigy_movement:0 "Prodigy: Starseeker"
+	leader_trait_tec_prodigy_movement_desc:0 "§LThis Leader has developed special skills from a young age, understanding how certain reactors and thrusters works and applying that knowledge for fleet movement.§!"
 
-	leader_trait_general_tec_prodigy_tactical:0 "Prodigy: Tactical Brotherhood"
-	leader_trait_general_tec_prodigy_tactical_desc:0 "This Admiral has developed special skills from a young age, growing and training with his soldiers as equals, achieving a greater degree of coordination and sympathy.§!"
+	leader_trait_tec_prodigy_emulators:0 "Prodigy: Simulator knowledge"
+	leader_trait_tec_prodigy_emulators_desc:0 "§LThis Leader has developed special skills from a young age, playing grand strategy 8k holo-games, applying unusual tactics and real-time-strategy knowledge to its tasks.§!"
 
-	# 7.5% unity production # 7.5% research production # 7.5% alloys production # 7.5% cg production
-	leader_trait_governor_tec_prodigy_arts:0 "Prodigy: Artistic sensitivity"
-	leader_trait_governor_tec_prodigy_arts_desc:0 "§LThis Governor has developed special skills from a young age, creating a deep bond with arts and culture, greatly valuing and improving social development.§!"
-	leader_trait_governor_tec_prodigy_research:0 "Prodigy: Scientific rusher"
-	leader_trait_governor_tec_prodigy_research_desc:0 "§LThis Governor has developed special skills from a young age, greatly boosting the focus towards research and development of new improvements to its sector.§!"
-	leader_trait_governor_tec_prodigy_forge:0 "Prodigy: Materials Engineer"
-	leader_trait_governor_tec_prodigy_forge_desc:0 "§LThis Governor has developed special skills from a young age, knowing the whereabouts of alloy industry and improving itself the production, at a great scale.§!"
-	leader_trait_governor_tec_prodigy_cg:0 "Prodigy: Industrial Engineer"
-	leader_trait_governor_tec_prodigy_cg_desc:0 "§LThis Governor has developed special skills from a young age, being a eminence in the matter of production and design of any good.§!"
-	# 10% unity 5% happiness # 10% upkeep 5% output # 10% diplo weight 0.5 influence
-	leader_trait_ruler_tec_prodigy_unity:0 "Prodigy: Sense of unity"
-	leader_trait_ruler_tec_prodigy_unity_desc:0 "§LThis Ruler has developed special skills from a young age, taking in mind his example as a way to ensure others will be able to follow.§!"
-	leader_trait_ruler_tec_prodigy_solidarity:0 "Prodigy: Solidarity"
-	leader_trait_ruler_tec_prodigy_solidarity_desc:0 "§LThis Ruler has developed special skills from a young age, taking in mind a generous distribution of resources will greatly boost the productivity.§!"
-	leader_trait_ruler_tec_prodigy_dexter:0 "Prodigy: Political dexterity"
-	leader_trait_ruler_tec_prodigy_dexter_desc:0 "§LThis Ruler has developed special skills from a young age, being a cunning individual able to convince near anyone with a extreme versatile and rich discourse.§!"
+	leader_trait_tec_prodigy_tactical:0 "Prodigy: Tactical Brotherhood"
+	leader_trait_tec_prodigy_tactical_desc:0 "This Admiral has developed special skills from a young age, growing and training with his brethren as equals, achieving a greater degree of coordination and sympathy.§!"
 
-	# _curious #10% anomaly change 5% research / # 10% research
-	leader_trait_scientist_tec_prodigy:0 "Prodigy: Attention to detail"
-	leader_trait_scientist_tec_prodigy_desc:0 "§LThis Scientist has developed special skills from a young age, being meticulous and giving extreme attention to details.§!"
-	leader_trait_scientist_tec_prodigy_genius:0 "Prodigy: Unleashed geniality"
-	leader_trait_scientist_tec_prodigy_genius_desc:0 "§LThis Scientist has developed special skills from a young age, having a very distinctive way of operating, both in genius and maniacal ways.§!"
+	leader_trait_tec_prodigy_arts:0 "Prodigy: Artistic sensitivity"
+	leader_trait_tec_prodigy_arts_desc:0 "§LThis Leader has developed special skills from a young age, creating a deep bond with arts and culture, greatly valuing and improving social development.§!"
+
+	leader_trait_tec_prodigy_research:0 "Prodigy: Scientific rusher"
+	leader_trait_tec_prodigy_research_desc:0 "§LThis Leader has developed special skills from a young age, greatly boosting the focus towards research and development of new technologies applied to its tasks.§!"
+
+	leader_trait_tec_prodigy_materials:0 "Prodigy: Materials Engineer"
+	leader_trait_tec_prodigy_materials_desc:0 "§LThis Governor has developed special skills from a young age, knowing the whereabouts of alloy industry and improving itself the production, at a great scale.§!"
+
+	leader_trait_tec_prodigy_industry:0 "Prodigy: Industrial Engineer"
+	leader_trait_tec_prodigy_industry_desc:0 "§LThis Governor has developed special skills from a young age, being a eminence in the matter of production and design of any good.§!"
+
+	leader_trait_tec_prodigy_unity:0 "Prodigy: Sense of unity"
+	leader_trait_tec_prodigy_unity_desc:0 "§LThis Ruler has developed special skills from a young age, taking in mind his example as a way to ensure others will be able to follow.§!"
+
+	leader_trait_tec_prodigy_solidarity:0 "Prodigy: Solidarity"
+	leader_trait_tec_prodigy_solidarity_desc:0 "§LThis Ruler has developed special skills from a young age, taking in mind a generous distribution of resources will greatly boost the productivity.§!"
+
+	leader_trait_tec_prodigy_political:0 "Prodigy: Political dexterity"
+	leader_trait_tec_prodigy_political_desc:0 "§LThis Ruler has developed special skills from a young age, being a cunning individual able to convince near anyone with a extreme versatile and rich discourse.§!"
+
+	leader_trait_tec_prodigy_detail:0 "Prodigy: Attention to detail"
+	leader_trait_tec_prodigy_detail_desc:0 "§LThis Scientist has developed special skills from a young age, being meticulous and giving extreme attention to details.§!"
+
+	leader_trait_tec_prodigy_genius:0 "Prodigy: Unleashed geniality"
+	leader_trait_tec_prodigy_genius_desc:0 "§LThis Scientist has developed special skills from a young age, having a very distinctive way of operating, both in genius and maniacal ways.§!"
 
  # --------------- Hive Cerebrates
-	leader_trait_tec_hive_cerebrate:0 "Cerebrate"
+	leader_trait_tec_hive_cerebrate:0 "Designated Cerebrate"
 	leader_trait_tec_hive_cerebrate_desc:0 "§LThis leader has been breed to be extremely effective at his assignment amongst the collective.§!"
 
  # --------------- Cyberhive Matrices
-	leader_trait_tec_hive_matrices:0 "Organisation Matrix"
-	leader_trait_tec_hive_matrices_desc:0 "§LThis leader has been bred, modified and adapted to maximize the efficiency at its tasks.§!"
+	leader_trait_tec_hive_matrix:0 "Organization Matrix"
+	leader_trait_tec_hive_matrix_desc:0 "§LThis leader has been bred, modified and adapted to maximize the efficiency at its tasks.§!"
 
  # --------------- Machine Delegated
-	leader_trait_tec_machine_delegated:0 "Unique Protocol"
+	leader_trait_tec_machine_delegated:0 "Delegated Protocol"
 	leader_trait_tec_machine_delegated_desc:0 "§LThis leader has been meticulously designed and post-programmed to be extremely effective at control and execution of its assigned functions.§!"
 
  # --------------- Non used
