Ai auth expereience system, adjusted more starting events, fixed some scripted empires, adjusted game rules and added ai auth cuis

--- a/localisation/english/zz_evolved_building_jobs_megas_l_english.yml
+++ b/localisation/english/zz_evolved_building_jobs_megas_l_english.yml
@@ -3590,7 +3590,7 @@ mod_tec_scientist_starting_skill_add: "$scientist_with_icon$ $tec_starting_level
 mod_tec_governor_starting_skill_add: "$governor_with_icon$ $tec_starting_level$"
 
 tec_starting_traits: "Starting Traits"
-mod_tec_leader_starting_traits_add: "Starting $tec_starting_traits$"
+mod_tec_leader_starting_traits_add: "Leader $tec_starting_traits$"
 mod_tec_admiral_starting_traits_add: "$admiral_with_icon$ $tec_starting_traits$"
 mod_tec_general_starting_traits_add: "$general_with_icon$ $tec_starting_traits$"
 mod_tec_scientist_starting_traits_add: "$scientist_with_icon$ $tec_starting_traits$"
@@ -3599,11 +3599,20 @@ mod_tec_governor_starting_traits_add: "$governor_with_icon$ $tec_starting_traits
 mod_tec_ruler_only_councilor_traits: "Rulers can only get Councilor Traits"
 mod_tec_councilor_only_councilor_traits: "Councilors can only get Councilor Traits"
 mod_tec_leader_only_councilor_traits: "Leader can only get Councilor Traits"
+mod_tec_leader_only_normal_traits: "Leader can only get Normal Traits"
+
 
 # Ai auth
-mod_tec_aiauth_total_weight_add: "$tec_loc_sr_tec_ai_power$ to Experience Share Weight"
+mod_tec_aiauth_total_weight_add: ""
+mod_tec_aiauth_ruler_weight_add: "$tec_loc_sr_tec_ai_power$ Ruler Weight"
+mod_tec_aiauth_councilor_weight_add: "$tec_loc_sr_tec_ai_power$ Councilor Node Weight"
+mod_tec_aiauth_planetary_node_weight_add: "$tec_loc_sr_tec_ai_power$ Planetary Node Weight"
+mod_tec_aiauth_weight_add: "$tec_loc_sr_tec_ai_power$ Leader Weight"
+
+
 mod_tec_aiauth_experience_per_month: "$tec_loc_sr_tec_ai_power$ Allocated to Experience Gain"
 
+mod_tec_aiauth_idle_nodes_add_tooltip: "$tec_loc_sr_tec_ai_power$ Idle Node Weight: §Y+1§!"
 # Admin locs
 
 job_tec_mecha_priest_icon:0 "£job_tec_mecha_priest£"
@@ -3646,8 +3655,6 @@ tec_job_technician_drone_and_thermogenerator_drone:0 "$job_technician_drone$ and
 tec_job_technician_drones_and_thermogenerator_drones:0 "$job_technician_drone_plural$ and £tec_thermogenerator_drone£ $job_tec_thermogenerator_drone_plural$"
 
 # Eco cats
-leader_rulers:0 "Rulers"
-leader_envoys:0 "Envoys"
 
 # Jobs WIP
 
