--- a/localisation/english/zz_evolved_categories_l_english.yml
+++ b/localisation/english/zz_evolved_categories_l_english.yml
@@ -66,6 +66,10 @@
 
  planet_tec_batteries: "Organic Batteries"
 
+
+leader_rulers:0 "Rulers"
+leader_envoys:0 "Envoys"
+
  # Trait specific
  planet_jobs_tec_biopsionic_embroidered:0 "Embroidered Pops"
  planet_jobs_tec_cyberlinked:0 "Cyberconnected Pops"
