--- a/localisation/english/zz_evolved_cui_l_english.yml
+++ b/localisation/english/zz_evolved_cui_l_english.yml
@@ -281,3 +281,5 @@ tec_ai_power_balance_positive: "§G+[tec_ai_power_balance_value]§!"
 
 tec_cui_ai_power: "$tec_loc_sr_tec_ai_power$: [FROM.tec_ai_power_balance]"
 tec_cui_ai_power_effect: ""
+
+tec_aiauth_experience_tooltip: "\nAI Node Leaders do not gain experience normally. Spare §Y$tec_loc_sr_tec_ai_power$§! gets converted into experience, distributed in a weighted manner between AI nodes.\n\nExperience Weight Share/Total: §Y[tec_aiauth_node_weight_tooltip]/[owner.tec_aiauth_total_weight]§!"
